--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,7 +3,7 @@ name: Build APK
 on:
   push:
     branches:
-      - main  # Change to your branch
+      - main
   workflow_dispatch:
 
 jobs:
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Make gradlew executable
+        run: chmod +x gradlew
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
